<resources>
    <string name="app_name">FoodApplication</string>

    <!-- Regisztráció/Belépés -->
    <string name="login">Belépés</string>
    <string name="password">Jelszó</string>
    <string name="email">Email</string>

    <string name="household">Háztartás</string>
    <string name="empty_list">Nincs még elem a listában</string>
    <string name="new_food">Új termék hozzáadása</string>
    <string name="empty_shopping_list">Üres a bevásárlólistád :(</string>
    <string name="empty_storage_list">Még nem vettél fel terméket a háztartásba :(</string>



    <string name="food">Élelmiszer</string>
    <string name="editfood">Élelmiszer szerkesztése</string>
    <string name="close">Close</string>
    <string name="add">Hozzáadás</string>
    <string name="delete">Törlés</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="newHousehold">Új háztartás létrehozása</string>
    <string name="joinHousehold">Csatlakozás egy háztartáshoz</string>
    <string name="settings">Beállítások</string>
    <string name="logout">Kijelentkezés</string>

    <string name="quantity">Mennyiség</string>
    <string name="comment">Megjegyzés</string>
    <string name="empty_name">Gipsz Jakab</string>
    <string name="households">Háztartásai</string>
    <string name="username">Felhasználó neve</string>
    <string name="change_name">Név változtatása</string>
    <string name="change_password">Jelszó változtatása</string>

</resources>