<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editfood"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:id="@+id/closeDialog"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/close_x"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/close" />
    </RelativeLayout>

    <EditText
        android:id="@+id/foodNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/food"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/foodCommentEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comment"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/foodQuantityEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/foodUnitSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/add"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/delete"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
