<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/header_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/menu_background"
    android:gravity="bottom"
    android:orientation="vertical">

    <ImageView
        android:contentDescription="@string/household"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/food_logo" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/paprika"
        android:text="@string/empty_name"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:fontFamily="@font/paprika"
        android:text="@string/households"
        android:textSize="24sp" />


</LinearLayout>
